# GetOutVideo-api

./: .env.example  .gitignore  API_EXTRACTION_PLAN.md  API_README.md  BUG_FIX_SUMMARY.md  CLAUDE.md  IMPLEMENTATION_PLAN_MP4_SUPPORT.md  LICENSE  README.md  TECHNICAL_ANALYSIS_example_2_single_video.md  WatchYTPL4Me.lnk  YouTube Playlist Summarizer.lnk  YouTubePlaylistSummarizer.spec  debug_test.py  main.py  main.pyw  prompts.py  pyproject.toml  requirements.txt  run_debug.py  setup.py  test.py  test_fix.py  ytvideo2txt.py
api/: __init__.py  ai_processor.py  config.py  examples.py  exceptions.py  models.py  transcript_extractor.py
api/tests/: test_api_interface.py  test_config.py  test_utils.py
examples/: advanced_usage.py  basic_usage.py
getoutvideo/: __init__.py
