[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "getoutvideo"
version = "1.0.0"
description = "Extract and process YouTube video transcripts with AI"
authors = [{name = "GetOutVideo API", email = "contact@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytubefix",
    "youtube-transcript-api",
    "openai>=1.75.0",
    "python-dotenv",
    "yt-dlp",
    "pydub",
    "ffmpeg-python",
]
keywords = ["youtube", "transcript", "ai", "openai", "video-processing", "gpt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://github.com/yourusername/getoutvideo"
Documentation = "https://getoutvideo.readthedocs.io"
Repository = "https://github.com/yourusername/getoutvideo"
Issues = "https://github.com/yourusername/getoutvideo/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "flake8", "mypy", "twine", "build"]
test = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["getoutvideo*"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]